fixed bottom align

--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,7 @@ body {
   position: fixed;
   list-style-type: none;
   top: 0;
+  background: black;
   height: 80px;
   width: 100%;
   border-style: solid;
@@ -26,6 +27,7 @@ body {
 #header li{
   float: left;
   font: 25px monospace;
+  background: black;
   color: lime;
 }
 
